--- a/project/index.html
+++ b/project/index.html
@@ -2,7 +2,7 @@
 <html lang="ta">
   <head>
     <meta charset="UTF-8" />
-    <title>Tamil Voice & Schemes UI</title>
+    <title>Tamil Voice  Schemes </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Bootstrap CSS -->
