--- a/project/index.html
+++ b/project/index.html
@@ -124,7 +124,7 @@
 
         return (
           <div className="voice-chat">
-            <h1>🗣️ தமிழ் Sambanova உதவி</h1>
+            <h1>🗣️ Tamil AI Scheme Apply</h1>
             <input
               type="text"
               placeholder="உங்கள் கேள்வியை உள்ளிடவும்"
@@ -149,10 +149,10 @@
         const schemes = [
           { name: "பசுமை திட்டம்", image: "images/green.jpg" },
           { name: "அரசு வேலைவாய்ப்பு", image: "images/job.jpg" },
-          { name: "மருத்துவ உதவி", image: "images/health.jpg" },
+          { name: "மருத்துவ உதவி", image: "images/medical.jpg" },
           { name: "பெண்கள் பாதுகாப்பு", image: "images/women.jpg" },
           { name: "கல்வி உதவி", image: "images/education.jpg" },
-          { name: "விவசாய உதவி", image: "images/farming.jpg" },
+          { name: "விவசாய உதவி", image: "images/agree.jpg" },
         ];
 
         const handleClick = (schemeName) => {
