--- a/project/index.html
+++ b/project/index.html
@@ -147,7 +147,7 @@
 
       function SchemeGrid() {
         const schemes = [
-          { name: "பசுமை திட்டம்", image: "images/green.jpg" },
+          { name: "பசுமை திட்டம்", image: "images/agree.jpg" },
           { name: "அரசு வேலைவாய்ப்பு", image: "images/job.jpg" },
           { name: "மருத்துவ உதவி", image: "images/medical.jpg" },
           { name: "பெண்கள் பாதுகாப்பு", image: "images/women.jpg" },
