--- a/project/home.html
+++ b/project/home.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Meta tag for site verification -->
   <meta name="google-site-verification" content="YOUR_VERIFICATION_CODE" />
+  <meta name="fast2sms" content="AK1KA3jfJrQ04gsLyChvTpSZYyipfKnG"> <!-- Added Fast2SMS verification tag -->
   <meta name="description" content="OTP Verification using Fast2SMS API">
   <meta name="author" content="Your Name">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
