--- a/project/index.html
+++ b/project/index.html
@@ -2,7 +2,7 @@
 <html lang="ta">
   <head>
     <meta charset="UTF-8" />
-    <title>Tamil Voice  Schemes </title>
+    <title>Tamil Voice Schemes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Bootstrap CSS -->
@@ -27,7 +27,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <script type="text/babel">
-      const SAMBANOVA_KEY = "b83fd8b0-19ea-4af6-bb47-16587ceb3c0a";
+      const TOGETHER_API_KEY = "103a7289888c3de65bede92e1f8a3806a057b72a0c552825669901d4819e0d4b";
 
       function VoiceChat() {
         const [userText, setUserText] = React.useState("");
@@ -35,20 +35,20 @@
         const [isRecording, setIsRecording] = React.useState(false);
         const [recordingText, setRecordingText] = React.useState("");
 
-        // Sends the input text to the API and sets the AI response.
+        // Send input text to Together AI
         const handleTextSubmit = async (text) => {
           const query = text || userText;
           if (!query.trim()) return;
           setAiResponse("⏳ பதிலை பெற முயற்சிக்கிறது...");
-          const result = await fetch("https://api.sambanova.ai/v1/chat/completions", {
+
+          const result = await fetch("https://api.together.xyz/v1/chat/completions", {
             method: "POST",
             headers: {
-              Authorization: `Bearer ${SAMBANOVA_KEY}`,
+              Authorization: `Bearer ${TOGETHER_API_KEY}`,
               "Content-Type": "application/json",
             },
             body: JSON.stringify({
-              stream: false,
-              model: "DeepSeek-V3-0324",
+              model: "togethercomputer/deepseek-chat",
               messages: [
                 {
                   role: "system",
@@ -59,6 +59,7 @@
               ],
             }),
           });
+
           const data = await result.json();
           if (data.choices && data.choices.length > 0) {
             const responseText = data.choices[0].message.content
@@ -71,7 +72,7 @@
           }
         };
 
-        // Uses speechSynthesis to speak the AI response.
+        // Text-to-speech for Tamil response
         const speakTamil = (text) => {
           if ("speechSynthesis" in window) {
             const voices = window.speechSynthesis.getVoices();
@@ -87,7 +88,7 @@
           }
         };
 
-        // Starts speech recognition which automatically stops when speech finishes.
+        // Voice input using Web Speech API
         const startVoiceRecognition = () => {
           const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
           if (!SpeechRecognition) {
@@ -101,12 +102,12 @@
           recognition.lang = "ta-IN";
           recognition.interimResults = false;
           recognition.maxAlternatives = 1;
-          recognition.continuous = false;  // Auto-stops after speech finishes
+          recognition.continuous = false;
 
           recognition.onresult = (event) => {
             const transcript = event.results[0][0].transcript;
             setUserText(transcript);
-            handleTextSubmit(transcript); // Auto-send to AI after speech ends
+            handleTextSubmit(transcript);
           };
 
           recognition.onerror = (event) => {
